...
                                          ),
                                          child: Row(
                                            children: [
                                              Expanded(
                                                child: Center(
                                                  child: IconButton(
                                                    key: Key('decrementKey'),
                                                    onPressed:
                                                        cartData.quantity == 1
                                                            ? null
                                                            : () {
                                                                _cartProvider
                                                                    .decrement(
...
                                                thickness: 1,
                                                color: Colors.grey.shade500,
                                              ),
                                              Expanded(
                                                child: Center(
                                                  child: IconButton(
                                                    key: Key('incrementKey'),
                                                    onPressed: cartData
                                                                .productQuantity <= //it was ==
                                                            cartData.quantity
                                                        ?
                                                        // null
                                                        () {
...
              ),
            ),
      bottomSheet: _cartProvider.getCartItem.isNotEmpty
          ? Padding(
              padding: const EdgeInsets.all(8.0),
              child: InkWell(
                key: Key('button_to_checkout'),
                onTap: _cartProvider.totalPrice == 0.00
                    ? null
                    : () {
                        Navigator.push(context,
                            MaterialPageRoute(builder: (context) {
                          return CheckoutScreen();
...
