...
              height: 60,
            ),
          ],
        ),
      ),
      bottomSheet: InkWell(
        key: Key('add_to_cart_button'),
        onTap: widget.productData['quantity'] <= 0
            ? null
            : _cartProvider.getCartItem
                    .containsKey(widget.productData['productId'])
                ? null
                : () {
...
              SizedBox(
                width: 5,
              ),
              _cartProvider.getCartItem
                      .containsKey(widget.productData['productId'])
                  ? InkWell(
                      key: Key('In_cart_button'),
                      onTap: () {
                        Navigator.push(context,
                            MaterialPageRoute(builder: (context) {
                          return CartScreen();
                        }));
                      },
...
